classDiagram
    direction LR

    class Location {
        +int id
        +string country
        +string region
        +string state
        +string city
        +string delivery_time
        +string street
        +users() hasMany
        +orders() hasMany
    }

    class User {
        +int id
        +string first_name
        +string last_name
        +string email
        +hashed password
        +string phone
        +string gender
        +bool status
        +string user_type
        +string preferred_locale
        +Carbon email_verified_at
        +int location_id
        +location() belongsTo
        +customer() hasOne
        +employee() hasOne
        +isManager() bool
        +isEmployee() bool
        +isCustomer() bool
    }

    class Customer {
        +int id
        +string allergies
        +string favorite_categories
        +bool ban
        +Carbon ban_date
        +int user_id
        +user() belongsTo
        +reservations() hasMany
        +orders() hasMany
        +mealRatings() hasMany
        +offerRatings() hasMany
        +isBanned() bool
    }

    class Employee {
        +int id
        +string national_id
        +string position
        +int salary
        +int bonus
        +string notes
        +date hire_date
        +date birth_date
        +int user_id
        +user() belongsTo
        +reservations() hasMany
        +orders() hasMany
        +maintenances() hasMany
        +isChef() bool
        +isWaiter() bool
        +isDelivery() bool
        +isSecurity() bool
    }

    class Table {
        +int id
        +string table_number
        +int capacity
        +string location
        +bool is_active
        +int price_per_hour
        +string description
        +reservations() belongsToMany
    }

    class Reservation {
        +int id
        +string reservation_code
        +string status
        +int party_size
        +string type
        +string special_requests
        +date date
        +int customer_id
        +int employee_id
        +int order_id
        +customer() belongsTo
        +employee() belongsTo
        +tables() belongsToMany
        +order() belongsTo
        +confirm()
        +cancel(reason)
    }

    class Maintenance {
        +int id
        +string maintenance_item
        +int total_price
        +int price
        +int discount
        +string notes
        +int employee_id
        +employee() belongsTo
        +calculateTotal() int
    }

    Location "1" --> "0..*" User : users
    User "1" --> "1" Customer : customer
    User "1" --> "1" Employee : employee
    Customer "1" --> "0..*" Reservation : reservations
    Employee "1" --> "0..*" Reservation : reservations
    Reservation "0..*" --> "0..*" Table : tables
    Employee "1" --> "0..*" Maintenance : maintenances
